--- a/task2/views/login.ejs
+++ b/task2/views/login.ejs
@@ -41,7 +41,7 @@
                                     ログイン
                                 </button>
                                 <div class="text-sm hover:text-blue-800">
-                                    <a href="/"> 新規登録はこちらから </a>
+                                    <a href="/register"> 新規登録はこちらから </a>
                                 </div>
                             </form>
                         </div>
