--- a/task2/views/register.ejs
+++ b/task2/views/register.ejs
@@ -24,8 +24,8 @@
                                         type="text"
                                         placeholder="ユーザー名"
                                         class="text-xl w-7/12 p-3 border rounded"
-                                        name="username"
                                         id="username"
+                                        name="username"
                                     />
                                 </div>
                                 <div class="mb-3">
@@ -33,8 +33,8 @@
                                         type="email"
                                         placeholder="you@gmail.com"
                                         class="text-xl w-7/12 p-3 border rounded"
-                                        name="email"
                                         id="email"
+                                        name="email"
                                     />
                                 </div>
                                 <div class="mb-3">
@@ -42,8 +42,8 @@
                                         type="password"
                                         placeholder="パスワード(7文字以上)"
                                         class="text-xl w-7/12 p-3 border rounded"
-                                        name="password"
                                         id="password"
+                                        name="password"
                                     />
                                 </div>
                                 <div class="mb-8">
@@ -51,16 +51,18 @@
                                         type="password"
                                         placeholder="パスワードの確認"
                                         class="text-xl w-7/12 p-3 border rounded"
-                                        name="confirmPassword"
-                                        id="confirmPassword"
+                                        id="confirm"
+                                        name="confirm"
                                     />
                                 </div>
-                                <button
-                                    type="submit"
-                                    class="text-xl w-4/12 bg-blue-800 text-white py-2 rounded hover:opacity-75"
-                                >
-                                    登録
-                                </button>
+                                <div>
+                                    <button
+                                        type="submit"
+                                        class="text-xl w-4/12 bg-blue-800 text-white py-2 rounded hover:opacity-75"
+                                    >
+                                        登録
+                                    </button>
+                                </div>
                             </form>
                         </div>
                     </div>
