--- a/task2/views/register.ejs
+++ b/task2/views/register.ejs
@@ -51,7 +51,7 @@
                                     class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 mb-2 rounded relative"
                                     role="alert"
                                 >
-                                    <strong class="font-bold"><%= errorMessage[i] %></strong>
+                                    <strong class="font-bold"><%= errorMessage[i].msg %></strong>
                                 </div>
                                 <% } %>
                                 <button
