ログアウト機能を追加

--- a/task2/views/layouts/navbar.ejs
+++ b/task2/views/layouts/navbar.ejs
@@ -12,7 +12,7 @@
         </button>
         <% } %> <% if(username) { %>
         <button class="ml-3 hover:opacity-50">
-            <a href="/register"> ログアウト </a>
+            <a href="/form/logout"> ログアウト </a>
         </button>
         <% } %>
     </div>
