--- a/task5__/views/layouts/navbar.ejs
+++ b/task5__/views/layouts/navbar.ejs
@@ -18,7 +18,7 @@
         </button>
         <% } %> <% if (activeUser) { %>
         <button class="mr-4 hover:opacity-50">
-            <a href="/form/logout"> ログアウト </a>
+            <a href="/logout"> ログアウト </a>
         </button>
         <% } %>
     </div>
