--- a/task5__/views/login.ejs
+++ b/task5__/views/login.ejs
@@ -13,7 +13,7 @@
                     <div class="w-9/12 border bg-white">
                         <div class="my-16 text-center">
                             <h2 class="text-4xl font-bold">ログイン</h2>
-                            <form action="/form/login" method="POST" class="mt-12">
+                            <form action="/login" method="POST" class="mt-12">
                                 <div class="mb-3">
                                     <input
                                         type="email"
