usersの記載を削除

--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -11,15 +11,7 @@
             <div class="bg-gray-100 flex-auto">
                 <div class="flex justify-center mt-20">
                     <div class="w-9/12 border bg-white">
-                        <div class="my-16 text-center">
-                            <% users.forEach((value) => { %>
-                            <ul>
-                                <li><%= value.username %></li>
-                                <li><%= value.email %></li>
-                                <li><%= value.password %></li>
-                            </ul>
-                            <% }) %>
-                        </div>
+                        <div class="my-16 text-center"></div>
                     </div>
                 </div>
             </div>
