ativeUserの記述削除。その他修正。

--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -16,5 +16,14 @@
                 </div>
             </div>
         </div>
+        <script>
+            fetch('http://localhost:3000', {
+                headers: {
+                    token: 'token',
+                },
+            }).then((res) => {
+                console.log(res.headers.get('token'));
+            });
+        </script>
     </body>
 </html>
