--- a/task5__/views/layouts/navbar.ejs
+++ b/task5__/views/layouts/navbar.ejs
@@ -9,14 +9,17 @@
         <button class="mr-4 hover:opacity-50">
             <a href="/post"> 投稿を作成 </a>
         </button>
+        <% if (!token) { %>
         <button class="mr-4 hover:opacity-50">
             <a href="/login"> ログイン </a>
         </button>
         <button class="mr-4 hover:opacity-50">
             <a href="/register"> 新規登録 </a>
         </button>
+        <% } else { %>
         <button class="mr-4 hover:opacity-50">
             <a href="/logout"> ログアウト </a>
         </button>
+        <% } %>
     </div>
 </header>
