--- a/task5__/views/post.ejs
+++ b/task5__/views/post.ejs
@@ -13,6 +13,39 @@
                     <div class="w-9/12 border bg-white">
                         <div class="my-16 text-center">
                             <h2 class="text-4xl font-bold">投稿</h2>
+                            <form action="/post" method="POST" class="mt-12">
+                                <div class="mb-5">
+                                    <input
+                                        type="text"
+                                        placeholder="タイトル"
+                                        name="title"
+                                        class="text-xl w-7/12 p-2 border rounded"
+                                    />
+                                </div>
+                                <div class="mb-8">
+                                    <textarea
+                                        type="text"
+                                        placeholder="コンテンツ"
+                                        name="content"
+                                        class="text-xl w-7/12 p-3 border rounded h-32 outline-none py-1 px-3 resize-none"
+                                    >
+                                    </textarea>
+                                </div>
+                                <% for(let i = 0; i < errorMessage.length; i ++) { %>
+                                <div
+                                    class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 mb-2 rounded relative"
+                                    role="alert"
+                                >
+                                    <strong class="font-bold"><%= errorMessage[i].msg %></strong>
+                                </div>
+                                <% } %>
+                                <button
+                                    type="submit"
+                                    class="mb-3 text-xl w-4/12 bg-blue-800 text-white py-2 rounded hover:opacity-75"
+                                >
+                                    新規投稿
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
