--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -11,7 +11,13 @@
             <div class="bg-gray-100 flex-auto">
                 <div class="flex justify-center mt-20">
                     <div class="w-9/12 border bg-white">
-                        <div class="my-16 text-center"></div>
+                        <div class="my-16 text-center">
+                            <% for(let i = 0; i < contents.length; i ++) { %> <%= contents[i].id
+                            %><br />
+                            <%= contents[i].title %> <br />
+                            <%= contents[i].content %> <br />
+                            <% } %>
+                        </div>
                     </div>
                 </div>
             </div>
