①デザイン変更 ②投稿編集ページ作成＋動作完了 <残り> 投稿の時にuser_idに値をつける。(Insert Join)

--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -12,10 +12,71 @@
                 <div class="flex justify-center mt-20">
                     <div class="w-9/12 border bg-white">
                         <div class="my-16 text-center">
-                            <% for(let i = 0; i < contents.length; i ++) { %> <%= contents[i].id
-                            %><br />
-                            <%= contents[i].title %> <br />
-                            <%= contents[i].content %> <br />
+                            <% for(let i = 0; i < contents.length; i ++) { %>
+                            <div class="text-gray-700 body-font overflow-hidden">
+                                <div class="container px-5 py-3 mx-auto">
+                                    <div class="flex flex-wrap -m-12">
+                                        <div class="p-12 md:w-1/2 flex flex-col items-start">
+                                            <h2
+                                                class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4"
+                                            >
+                                                <%= contents[i].title %>
+                                            </h2>
+                                            <p class="leading-relaxed mb-5">
+                                                <%= contents[i].content %>
+                                            </p>
+                                            <div
+                                                class="flex flex-col pb-4 mb-4 border-b-2 border-gray-200 mt-auto w-full"
+                                            >
+                                                <% if(contents[i].username === username) { %>
+                                                <a
+                                                    class="text-indigo-500 inline-flex items-center mb-3"
+                                                    href="/edit/<%= contents[i].id %>"
+                                                    >編集する
+                                                </a>
+                                                <% } %>
+                                                <span
+                                                    class="text-gray-600 inline-flex items-center leading-none text-sm"
+                                                >
+                                                    <svg
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        width="18px"
+                                                        height="18px"
+                                                        stroke="currentColor"
+                                                        stroke-width="2"
+                                                        fill="none"
+                                                        stroke-linecap="round"
+                                                        stroke-linejoin="round"
+                                                        viewBox="0 0 24 24"
+                                                        class="mr-1"
+                                                    >
+                                                        <path
+                                                            stroke-linecap="round"
+                                                            stroke-linejoin="round"
+                                                            stroke-width="2"
+                                                            d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+                                                        />
+                                                    </svg>
+                                                    0
+                                                </span>
+                                            </div>
+                                            <a class="inline-flex items-center">
+                                                <img
+                                                    alt="blog"
+                                                    src="https://dummyimage.com/104x104"
+                                                    class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center"
+                                                />
+                                                <span class="flex-grow flex flex-col pl-4">
+                                                    <span
+                                                        class="title-font font-medium text-gray-900"
+                                                        ><%= contents[i].username %></span
+                                                    >
+                                                </span>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <% } %>
                         </div>
                     </div>
