--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -57,7 +57,7 @@
                                                             d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
                                                         />
                                                     </svg>
-                                                    0
+                                                    <%= contents[i].like %>
                                                 </span>
                                             </div>
                                             <a class="inline-flex items-center">
