--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -35,30 +35,32 @@
                                                     >編集する
                                                 </a>
                                                 <% } %>
-                                                <span
-                                                    class="text-gray-600 inline-flex items-center leading-none text-sm"
-                                                >
-                                                    <svg
-                                                        xmlns="http://www.w3.org/2000/svg"
-                                                        width="18px"
-                                                        height="18px"
-                                                        stroke="currentColor"
-                                                        stroke-width="2"
-                                                        fill="none"
-                                                        stroke-linecap="round"
-                                                        stroke-linejoin="round"
-                                                        viewBox="0 0 24 24"
-                                                        class="mr-1"
+                                                <div class="inline-flex btn">
+                                                    <span
+                                                        class="text-gray-600 inline-flex items-center leading-none text-sm"
                                                     >
-                                                        <path
+                                                        <svg
+                                                            xmlns="http://www.w3.org/2000/svg"
+                                                            width="18px"
+                                                            height="18px"
+                                                            stroke="currentColor"
+                                                            stroke-width="2"
+                                                            fill="none"
                                                             stroke-linecap="round"
                                                             stroke-linejoin="round"
-                                                            stroke-width="2"
-                                                            d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-                                                        />
-                                                    </svg>
-                                                    <%= contents[i].like %>
-                                                </span>
+                                                            viewBox="0 0 24 24"
+                                                            class="mr-1"
+                                                        >
+                                                            <path
+                                                                stroke-linecap="round"
+                                                                stroke-linejoin="round"
+                                                                stroke-width="2"
+                                                                d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+                                                            />
+                                                        </svg>
+                                                        <%= contents[i].like %>
+                                                    </span>
+                                                </div>
                                             </div>
                                             <a class="inline-flex items-center">
                                                 <img
