--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -2,6 +2,11 @@
 <html lang="ja">
     <!-- head -->
     <%- include("layouts/head") %>
+    <style>
+        .likes {
+            fill: black;
+        }
+    </style>
 
     <body>
         <div class="flex flex-col h-screen">
@@ -85,5 +90,21 @@
                 </div>
             </div>
         </div>
+
+        <script>
+            const btn = document.querySelectorAll('.btn');
+
+            btn.forEach((btn) => {
+                btn.addEventListener('click', () => {
+                    console.log(btn);
+                    //値を取得
+                    console.log(btn.innerText);
+                    const btnSpanSvg = document.querySelectorAll('.btn > span > svg');
+                    for (let i = 0; i < btnSpanSvg.length; i++) {
+                        btnSpanSvg[i].classList.toggle('likes');
+                    }
+                });
+            });
+        </script>
     </body>
 </html>
