--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -96,9 +96,17 @@
 
             btn.forEach((btn) => {
                 btn.addEventListener('click', () => {
-                    console.log(btn);
-                    //値を取得
-                    console.log(btn.innerText);
+                    //DB操作
+                    const sql = `UPDATE likes JOIN posts_likes ON likes.id = posts_likes.like.id JOIN posts ON posts.id = posts_likes.post_id JOIN users ON users.id = posts.user_id SET like = ${
+                        Number(btn.innerText) + 1
+                    } WHERE users.username = "${username}"`;
+                    con.query(sql, req.body, (err, result, fields) => {
+                        if (err) throw err;
+                        console.log(result);
+                        res.redirect('/');
+                    });
+
+                    //色付け
                     const btnSpanSvg = document.querySelectorAll('.btn > span > svg');
                     for (let i = 0; i < btnSpanSvg.length; i++) {
                         btnSpanSvg[i].classList.toggle('likes');
