--- a/task5__/views/index.ejs
+++ b/task5__/views/index.ejs
@@ -3,6 +3,9 @@
     <!-- head -->
     <%- include("layouts/head") %>
     <style>
+        .none {
+            display: none;
+        }
         .likes {
             fill: black;
         }
@@ -90,9 +93,13 @@
                 </div>
             </div>
         </div>
+        <div id="div1" class="none"><%= username %></div>
+        <div id="div2" class="none"><%= con %></div>
 
         <script>
             const btn = document.querySelectorAll('.btn');
+            const username = document.getElementById('div1').innerText;
+            const con = document.getElementById('div2').innerText;
 
             btn.forEach((btn) => {
                 btn.addEventListener('click', () => {
@@ -100,16 +107,18 @@
                     const sql = `UPDATE likes JOIN posts_likes ON likes.id = posts_likes.like.id JOIN posts ON posts.id = posts_likes.post_id JOIN users ON users.id = posts.user_id SET like = ${
                         Number(btn.innerText) + 1
                     } WHERE users.username = "${username}"`;
-                    con.query(sql, req.body, (err, result, fields) => {
+                    con.query(sql, (err, result, fields) => {
                         if (err) throw err;
                         console.log(result);
-                        res.redirect('/');
+                        console.log(fields);
                     });
 
                     //色付け
                     const btnSpanSvg = document.querySelectorAll('.btn > span > svg');
                     for (let i = 0; i < btnSpanSvg.length; i++) {
-                        btnSpanSvg[i].classList.toggle('likes');
+                        btnSpanSvg[i].addEventListener('click', () => {
+                            btnSpanSvg[i].classList.toggle('likes');
+                        });
                     }
                 });
             });
